--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <section class="mt-10 text-center p-5">
         <div class="md:flex justify-between items-center gap-10">
             <img class="md:max-w-[50%] md:max-h-[30%] rounded-lg" src="images/profile-2.webp" alt="Profile-img">
-            <p>This Image is not the original. It is Ai generated.</p>
-            <div>
+           <div>
+                 <p class="text-left">This Image is not the original. It is Ai generated.</p>
                 <h1 class="text-3xl font-bold md:text-5xl my-8">Welcome To  <span class="text-[#283566]">Saroj Bhattarai's </span>Portfolio</h1>
                 <p class="text-justify pt-5 text-xl">Explore my journey as a frontend developer as a fresher. Discover my projects and skills that make me a passionate and dedicated professional.</p>
                 <div class="flex flex-col md:flex-row items-center gap-3 mt-8">
